--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    color: blue;
+    color: #333;
     text-align: center;
     font-family: Arial;
     font-size: 16px;
@@ -28,7 +28,7 @@ body
 #container
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -42,4 +42,12 @@ body
 #post
 {
     padding: 1em;
+}
+
+#footer
+{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
 }
